maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:9: error: illegal start of simple expression
	while(!estFaceMur);
                          ^